<resources>
    <string name="app_name">Datos entre Activity</string>

    // TextView : Login
    <string name="id_tv_usuario">Usuario</string>
    <string name="id_tv_clave">Password</string>

    // TextView : Registro Canal
    <string name="tv_fecha_sistema">Fecha del Sistema</string>
    <string name="tv_codigo">Código : </string>
    <string name="tv_abrevitura">Abreviatura : </string>
    <string name="tv_descripcion">Descripción : </string>
    <string name="tv_trama_canal">Cada campo de un color diferente</string>

    // Edit Text : Registro Canal

    <string name="tv_codigo_ini">TM</string>
    <string name="tv_abrevitura_ini">ATM</string>
    <string name="tv_descripcion_ini">ATM PÚBLICO</string>

    // Button : Login
    <string name="id_btn_acceder">Ingresar</string>
    <string name="id_btn_retornar">Retornar</string>
    <string name="id_btn_salir">Salir</string>


</resources>
